# cbs-thesis-efficient-llm-distillation

./: .gitignore  README.md  init.sh  initial_tests.ipynb  pyproject.toml  requirements.txt
eda/: gold.ipynb  sentiment.ipynb  summary.ipynb
scripts/: load_datasets.py  load_sentiment.py  run_inference.py  run_inference_carbon-comparison.py  run_inference_on_dist_data.py  run_training.py  training_config.py
src/config/: query_config.py  training_config.py
src/data/: data_manager.py  data_transforms.py  load_datasets.py  load_results.py  process_datasets.py  pt_classes.py  sentiment_utils.py
src/evaluation/: eval_utils.py  evaluate.py  evaluate_performance.py  gold_evals.py  sentiment_evals.py  summary_evals.py
src/models/: distillation.py  hf_stopping.py  hf_utils.py  model_mapping.py  model_utils.py  ollama_utils.py  query_utils.py
src/prompts/: gold.py  sentiment.py  summary.py
src/utils/: clean_outputs.py  logs.py  setup.py
