[project]
name = "cbs-thesis-efficient-llm-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "bert-score>=0.3.13",
    "carbontracker>=2.1.2",
    "codecarbon>=2.8.3",
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "peft>=0.15.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tf-keras>=2.18.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "wandb>=0.19.7",
    "weave>=0.51.42",
]
